--- a/index.html
+++ b/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-    <title>document</title>
-    <link rel="stylesheet" href="css/style.css">
+
+    <title>Index</title>
 
 </head>
+
 <body>
- <script src="js/app.js"> </script>
+
+    <button id="purple">Click for purple cookie</button>
+    <button id="red">Click for red cookie</button>
+    <button id="blue">Click for blue cookie</button>
+
+
+    <button id="go_to_checkout">
+        <a href="checkout.html">Checkout</a>
+    </button>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
+    <script src="js/app.js"> </script>
 </body>
+
 </html>
